WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87808
[Qt] handled touchmove events should not cancel tap gesture recognition
https://bugs.webkit.org/show_bug.cgi?id=87808
Summary
[Qt] handled touchmove events should not cancel tap gesture recognition
Luiz Agostini
Reported
2012-05-29 18:54:26 PDT
All the gesture recognition is canceled when a touch event is handled by webprocess. If the touchmove event is handled by javascript then any touchmove, does not matter the length of the movement, will cancel the tap gesture recognition.
Attachments
patch
(2.16 KB, patch)
2012-05-30 11:02 PDT
,
Luiz Agostini
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2012-05-29 19:09:34 PDT
(In reply to
comment #0
)
> All the gesture recognition is canceled when a touch event is handled by webprocess. > > If the touchmove event is handled by javascript then any touchmove, does not matter the length of the movement, will cancel the tap gesture recognition.
If I understood it correctly, we do the same for the blackberry port.
Luiz Agostini
Comment 2
2012-05-30 11:02:42 PDT
Created
attachment 144870
[details]
patch
Kenneth Rohde Christiansen
Comment 3
2012-05-30 14:00:18 PDT
Comment on
attachment 144870
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144870&action=review
LGTM, but please cc Andras
> Source/WebKit2/UIProcess/qt/QtWebPageEventHandler.cpp:-439 > - resetGestureRecognizers();
Maybe that method is useless now? Did you check?
Luiz Agostini
Comment 4
2012-05-30 14:20:25 PDT
(In reply to
comment #3
)
> (From update of
attachment 144870
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=144870&action=review
> > LGTM, but please cc Andras > > > Source/WebKit2/UIProcess/qt/QtWebPageEventHandler.cpp:-439 > > - resetGestureRecognizers(); > > Maybe that method is useless now? Did you check?
It is used by QQuickWebViewPrivate::processDidCrash.
Kenneth Rohde Christiansen
Comment 5
2012-05-30 14:36:59 PDT
Comment on
attachment 144870
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144870&action=review
>>> Source/WebKit2/UIProcess/qt/QtWebPageEventHandler.cpp:-439 >>> - resetGestureRecognizers(); >> >> Maybe that method is useless now? Did you check? > > It is used by QQuickWebViewPrivate::processDidCrash.
OK, but I guess I will just do the cancels explicitly there instead...
WebKit Review Bot
Comment 6
2012-05-30 16:56:44 PDT
Comment on
attachment 144870
[details]
patch Clearing flags on attachment: 144870 Committed
r118997
: <
http://trac.webkit.org/changeset/118997
>
WebKit Review Bot
Comment 7
2012-05-30 16:56:49 PDT
All reviewed patches have been landed. Closing bug.
Andras Becsi
Comment 8
2012-05-31 02:39:55 PDT
(In reply to
comment #5
)
> (From update of
attachment 144870
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=144870&action=review
> > >>> Source/WebKit2/UIProcess/qt/QtWebPageEventHandler.cpp:-439 > >>> - resetGestureRecognizers(); > >> > >> Maybe that method is useless now? Did you check? > > > > It is used by QQuickWebViewPrivate::processDidCrash. > > OK, but I guess I will just do the cancels explicitly there instead...
I'm working on a patch which removes that function and also the base class of the recognizers as discussed earlier, but first I want to simplify the tap gesture recognizer a bit.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug