[Qt] handled touchmove events should not cancel tap gesture recognition https://bugs.webkit.org/show_bug.cgi?id=87808

Patch by Luiz Agostini <luiz.agostini@nokia.com> on 2012-05-30
Reviewed by Kenneth Rohde Christiansen.

Tap gesture recognition should not be canceled if a touchmove event is handled
by the web process.

* UIProcess/qt/QtWebPageEventHandler.cpp:
(WebKit::QtWebPageEventHandler::doneWithTouchEvent):

Canonical link: https://commits.webkit.org/105717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118997 268f45cc-cd09-0410-ab3c-d52691b4dbfc